adicionando novos caminhos

--- a/serverless.yml
+++ b/serverless.yml
@@ -67,6 +67,12 @@ functions:
       - httpApi:
           method: GET
           path: /
+  helloWorld:
+    handler: handler.helloWorld
+    events:
+      - httpApi:
+          method: GET
+          path: /world
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
 #    Check the event documentation for details
