atualização da action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,12 @@ name: CD
 on:
   push:
     branches: [ master ]
+    paths: '**.py'
+    paths: '**.yml'
   pull_request:
     branches: [ master ]
+    paths: '**.py'
+    paths: '**.yml'
 
 jobs:
   build:
