--- a/serverless.yml
+++ b/serverless.yml
@@ -11,7 +11,7 @@
 #
 # Happy Coding!
 
-service: python-serverless-test
+service: python-serverless
 # app and org for use with dashboard.serverless.com
 #app: your-app-name
 #org: your-org-name
@@ -25,9 +25,8 @@ provider:
   runtime: python3.8
   region: sa-east-1
   httpApi:
-    cors: 
-      allowedOrigins:
-        - https://url1.com
+    cors: true
+
 # you can overwrite defaults here
 #  stage: dev
 #  region: us-east-1
